<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <modules.general.ui.utils.GUI.CustomSpinner
        android:id="@+id/spCategories"
        style="@style/matchWrapStyle"
        android:visibility="gone"
        android:background="@android:color/transparent"></modules.general.ui.utils.GUI.CustomSpinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/spCategories"
        android:layout_above="@+id/rlBottomBtns"
        android:layout_margin="@dimen/small_margin">

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:maxLines="1"
            android:inputType="text" />

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="gone" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rlBottomBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:id="@+id/llEditDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginRight="@dimen/medium_margin" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove"
                android:background="@android:color/holo_blue_dark" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>